# hydradb

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  WORKSPACE.bazel  deps.bzl  go.mod  go.sum
.github/workflows/: bazel.yml  codeql.yml
api/: BUILD.bazel  api.go
internal/: BUILD.bazel  config.go  db.go  db_test.go  schemas_info.go
server/: BUILD.bazel  main.go
