load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "lib",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/c16a/hydradb/internal",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_yalp_jsonpath//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "internal_test",
    srcs = glob(["*_test.go"]),
    embed = [
        "lib",
    ],
    deps = [
        "@com_github_spf13_afero//:go_default_library",
    ],
)
